# voistarcraft

./: README.md  pyproject.toml
broodwar_commander/: __init__.py  bw_executor.py
docs/: architecture.md  claude-handoff.md  contracts.md  llm-combo-controller-plan.md  roadmap-llm-gui.md  sc2-smoke-test.md
starcraft_commander/: __init__.py  contracts.py  demo_sc2.py  event_memory.py  feasibility.py  live_pipeline.py  llm_interpreter.py  narrator.py  runtime_deps.py  sc2_executor.py  standing_orders.py  voice_input.py  web_gui.py
tests/: test_architecture_docs.py  test_bw_executor.py  test_demo_sc2.py  test_event_memory.py  test_executor.py  test_feasibility.py  test_intents.py  test_interpreter.py  test_live_pipeline.py  test_llm_interpreter.py  test_map.py  test_narrator.py  test_pipeline.py  test_runtime_deps.py  test_sc2_executor.py  test_sc2_feasibility.py  test_sc2_map_resolver.py  test_sc2_narrator.py  test_standing_orders.py  test_structures.py  test_tactical_controller.py  test_units.py  test_voice_input.py  test_web_gui.py
toycraft_commander/: __init__.py  aliases.py  compat.py  executor.py  failure.py  feasibility.py  intents.py  interpreter.py  map.py  narrator.py  pipeline.py  structures.py  tactical_controller.py  units.py
